# evince

./: .gitlab-ci.yml  configure.ac  meson.build
backend/pdf/: ev-poppler.c
data/: meson.build  org.gnome.Evince.appdata.xml.in.in
libview/: ev-jobs.c  ev-jobs.h
po/: POTFILES.in
shell/: ev-properties-fonts.c  evince-properties-fonts.ui
